# Vox2Book

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.json  config.py  pipeline.py  requirements-transcribe.txt  run_api_pipeline.py  run_pipeline.py  transcribe.bat
config/: glossary_user.example.json  transcribe.example.json
docs/: PROJECT_STRUCTURE.md  PROJECT_VS_PROMPT.md  TECHNICAL_SPECIFICATION.md  USER_GUIDE.md
docs/en/: AUDIO_TRANSCRIPTION.md  HOW_TO_WORK.md
docs/ru/: AUDIO_TRANSCRIPTION.md  HOW_TO_WORK.md
docs/uk/: AUDIO_TRANSCRIPTION.md  HOW_TO_WORK.md
inputs/audio/: .gitkeep  README.md
inputs/raw_texts/: .gitkeep
pipeline/: __init__.py  builder.py  cleaner.py  editor.py  engine.py  extractor.py  validator.py
pipeline/builders/: docx_builder.py
pipeline/editors/: __init__.py  drama_editor.py  poetry_editor.py  prose_editor.py  typography.py
pipeline/extractors/: __init__.py  auto_extractor.py  text_reader.py
prompts/: HALLUCINATION_PURGER_PROMPT.md  LITERARY_EDITOR_PROMPT.md  MASTER_LLM_PROMPT.md  PROOFREAD_TYPOGRAPHY_PROMPT.md  README.md
prompts/en/: AGENT_WORKFLOW.md  START_USER_PROMPT.md  UNIVERSAL_EDITOR_SYSTEM.md
prompts/glossary/: CONTEXTUAL_TYPO_CORRECTION_GUIDE.en.md  CONTEXTUAL_TYPO_CORRECTION_GUIDE.ru.md  CONTEXTUAL_TYPO_CORRECTION_GUIDE.uk.md  (+4 more)
src/: config.rs  gui.rs  lib.rs  llm.rs  logger.rs  main.rs  models.rs
tests/: test_universal_pipeline.py  universal_rust_tests.rs
tools/: install_transcribe.ps1  transcribe_audio.py
Анфи/: .~lock.Голосовые_сообщения_2024-2025.docx#  Голосовые_сообщения_2024-2025.docx  Голосовые_сообщения_2026.docx
(+24 files in other folders)
