[package]
name = "vox2book"
version = "1.0.0"
edition = "2021"
authors = ["kir-spec <https://github.com/kir-spec>"]
description = "Universal Literature Processing & Automated Publishing Engine"

[dependencies]
docx-rs = "0.4"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
rayon = "1.8"
dialoguer = "0.11"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
