[package]
name = "vox2book"
version = "2.0.0"
edition = "2021"
authors = ["kir-spec <https://github.com/kir-spec>"]
description = "Universal Literature Processing & Automated Publishing Engine"

[dependencies]
docx-rs = "0.4"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
rayon = "1.8"
dialoguer = "0.11"
chrono = "0.4"
eframe = "0.27"
rfd = "0.14"
encoding_rs = "0.8"
zip = "0.6"
quick-xml = "0.31"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
